# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
01-hellowidget/: CMakeLists.txt  MyOpenGLWidget.cpp  MyOpenGLWidget.h  README.md
02-triangle/: CMakeLists.txt  MyOpenGLWidget.cpp  MyOpenGLWidget.h  README.md  resource.qrc
02-triangle/shader/: triangle.frag  triangle.vert
03-GLSL/: CMakeLists.txt  MyOpenGLWidget.cpp  README.md  mainwindow.ui
03-GLSL/shader/: triangle.frag  triangle.vert
